--- a/tsconfig.json
+++ b/tsconfig.json
@@ -65,8 +65,7 @@
     /* Advanced Options */
     "skipLibCheck": true /* Skip type checking of declaration files. */,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */,
-    "jsx": "react",
-    "baseUrl": "src"
+    "jsx": "react"
   },
   "include": ["./src"],
   "exclude": ["node_modules", "es", "**/test", "src/_testComponent"]
