--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "common-mid",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "description": "提供一系列组件提供快速高效大家高质量中后台应用的能力",
   "main": "es/index.js",
   "module": "es/index.js",
@@ -20,7 +20,9 @@
   },
   "keywords": [
     "common-mid",
-    "typescript"
+    "typescript",
+    "react",
+    "antd"
   ],
   "author": "gisele Xiong  https://github.com/giseles",
   "license": "ISC",
