--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "common-mid",
-  "version": "0.3.1",
-  "description": "提供一系列组件提供快速高效大家高质量中后台应用的能力",
+  "version": "0.3.2",
+  "description": "提供一系列组件可快速高效的搭建高质量中后台应用",
   "main": "es/index.js",
   "module": "es/index.js",
   "types": "es/index.d.ts",
