--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "common-mid",
-  "version": "0.5.20",
+  "version": "0.5.21",
   "description": "提供一系列组件可快速高效的搭建高质量中后台应用",
   "main": "es/index.js",
   "module": "es/index.js",
@@ -30,6 +30,10 @@
     "url": "https://github.com/giseles/common-mid/issues"
   },
   "homepage": "https://github.com/giseles/common-mid#readme",
+  "dependencies": {
+    "braft-editor": "2.3.9",
+    "antd-img-crop": "4.6.0"
+  },
   "devDependencies": {
     "@types/jest": "^28.1.3",
     "jest": "^28.1.1",
