--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
   },
   "homepage": "https://github.com/giseles/common-mid#readme",
   "dependencies": {
-    "braft-editor": ">=2.3.9",
-    "antd-img-crop": ">=4.12.2"
+    "antd-img-crop": ">=4.12.2",
+    "braft-editor": ">=2.3.9"
   },
   "devDependencies": {
     "@types/jest": "^28.1.3",
+    "common-screw": "^1.2.6",
     "jest": "^28.1.1",
     "ts-jest": "^28.0.5",
     "typescript": "^4.7.4"
